--- a/client/src/index.css
+++ b/client/src/index.css
@@ -129,7 +129,7 @@ header h1 {
   position: absolute;
   top: 85px;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 200px;
   z-index: 100;
   background-repeat: repeat-x;
@@ -186,10 +186,10 @@ nav a:hover {
 }
 
 .search-bar-div {
-  position: fixed;
+  position: absolute;
   top: 220px;
   left: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 200;
   display: flex;
   justify-content: center;
@@ -332,6 +332,10 @@ nav a:hover {
   }
   .search-bar {
     font-size: 14px;
+  }
+
+  .search-bar-wrapper {
+    width: 70%;
   }
 
   .search-bar-div {
